@@ -23,6 +23,9 @@
 // exception does not however invalidate any other reasons why the
 // executable file might be covered by the GNU General Public License.
 
+#include <iostream>
+#include <iomanip>
+
 #include "apps/bench/dilation-lena.hh"
 #include "apps/data.hh"
 
@@ -67,6 +70,7 @@ run(const std::string& filename, unsigned niters)
   image2d<int_u8> d;
   util::timer t;
   std::vector<float> times;
+  times.reserve(5);
 
   DILATION_WITH_BUILTIN_WINDOW(nongen,      "nongen",      "nongen\t\t");
   DILATION_WITH_BUILTIN_WINDOW(nongen_2ptr, "nongen_2ptr", "nongen_2ptr\t");
@@ -106,7 +110,7 @@ run(const std::string& filename, unsigned niters)
 }
 
 int
-main ()
+main (int /* argc */, char* argv[])
 {
   unsigned niters = 10;
   typedef std::vector<float> times_t;
@@ -121,6 +125,8 @@ main ()
   times_t::const_iterator i_1024 = times_1024.begin();
   times_t::const_iterator i_2048 = times_2048.begin();
   std::cout <<
+    "% Generated by `" << argv[0] << "', do not modify.\n"
+    "\n"
     "\\begin{table}[tbp]\n"
     "  \\centering\n"
     "  \\begin{tabular}{lrrr}\n"
@@ -129,6 +135,9 @@ main ()
     "                   & $512^2$ & $1024^2$ & $2048^2$ \\\\\n"
     "    \\hline\n"
     "    \\hline\n";
+
+  // Fix the output format for floats.
+  std::cout << std::fixed << std::setprecision(4);
 
   /* Increment each iterator only once in each output statement to
      avoid non-determinism due to the successive uses of operator++ on
