@@ -23,6 +23,8 @@
 // exception does not however invalidate any other reasons why the
 // executable file might be covered by the GNU General Public License.
 
+#include <iostream>
+
 #include "apps/bench/dilation-lena.hh"
 #include "apps/data.hh"
 
