@@ -29,10 +29,6 @@
 /// \file
 /// \brief Dilation benchmark cases.
 
-#include <cstddef>
-
-#include <iostream>
-
 #include <mln/core/image/image2d.hh>
 #include <mln/core/alias/window2d.hh>
 
